<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/translucentGray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucentGray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:text="@string/time"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/timeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:paddingLeft="4dp"
                android:text="@string/moves"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/movesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalPlaysText"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="0dp"
                android:paddingLeft="4dp"
                android:text="@string/games_played"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/totalPlaysValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/additionalNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/record_note"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>